@@ -1,3 +1,8 @@
+2002-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Image.cpp (draw): Properly delimit individual drawing
+ 	commands so that MVG output is correct.
+
 2002-03-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Drawable.cpp (DrawableViewbox): MVG syntax wasn't correct.
